# langproc-cw

./: .devcontainer.json  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  c_compiler.md  test.py  test.sh
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: build-environment.yml  build-riscv-gnu-toolchain.yml  compiler-benchmark.yml  compiler-validation.yml  integration.yml  release.yml  validate-tests.yml
benchmark/: benchmark.h  matmul_sum.c  matmul_sum_driver.c
compiler_tests/_example/: example.c
compiler_tests/array/: declare_local_driver.c  index_constant_driver.c
compiler_tests/control_flow/: for_one.c  for_zero_v1.c  for_zero_v2.c  (+5 more)
debugging/: ExampleBacktrace2.java  README.md  example-backtrace-3.cpp  example-leak.c  makefile
docs/: assembler_directives.md  basic_compiler.md  c_compiler.md  coverage.md  debugging.md  debugging.old.md  environment_guide.md  extension_ideas.md  management.md  starting_guide.md
include/: ast.hpp  ast_constant.hpp  ast_context.hpp  ast_direct_declarator.hpp  ast_function_definition.hpp  ast_identifier.hpp  ast_jump_statement.hpp  ast_node.hpp  ast_statements.hpp  ast_type_specifier.hpp  cli.h  cli.hpp
scripts/: test.py  test.sh  toolchain_test.sh
src/: ast_constant.cpp  ast_context.cpp  ast_direct_declarator.cpp  ast_function_definition.cpp  ast_identifier.cpp  ast_jump_statement.cpp  ast_node.cpp  ast_statements.cpp  ast_type_specifier.cpp  cli.cpp  compiler.cpp  lexer.flex  parser.y  parser_full.y  parser_full.y.example  wrapper.sh
(+181 files in other folders)
